--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.1.0",
     "next": "11.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-bootstrap": "^2.0.0-beta.5",
+    "react-dom": "17.0.2",
+    "react-slick": "^0.28.1",
+    "sass": "^1.38.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "eslint": "7.32.0",
