--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next run build",
-    "start": "next run start",
+    "build": "next build",
+    "start": "node_modules/next/dist/bin/next start -p $PORT",
     "lint": "next lint"
   },
   "dependencies": {
