--- a/package.json
+++ b/package.json
@@ -3,23 +3,45 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "dev": "next dev",
+    "server": "json-server --port 4000 --watch db.json",
+    "nodemon": "nodemon"
   },
   "dependencies": {
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
+    "@material-ui/core": "^4.12.3",
+    "@mui/icons-material": "^5.0.5",
+    "@mui/material": "^5.0.6",
+    "axios": "^0.21.4",
+    "body-parser": "^1.19.0",
     "bootstrap": "^5.1.0",
+    "draft-js": "^0.11.7",
+    "express": "^4.17.1",
+    "express-validator": "^6.12.1",
+    "mongodb": "^4.1.2",
+    "mongoose": "^6.0.7",
     "next": "11.1.0",
+    "ra-data-simple-rest": "^3.19.0",
     "react": "17.0.2",
+    "react-admin": "^3.19.0",
     "react-bootstrap": "^2.0.0-beta.5",
     "react-dom": "17.0.2",
+    "react-draft-wysiwyg": "^1.14.7",
+    "react-router-dom": "^5.3.0",
     "react-slick": "^0.28.1",
+    "reflect-metadata": "^0.1.13",
     "sass": "^1.38.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "typeorm": "^0.2.37"
   },
   "devDependencies": {
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.0"
+    "eslint": "^7.32.0",
+    "eslint-config-next": "11.1.0",
+    "nodemon": "^2.0.12",
+    "prettier": "2.4.1"
   }
 }
