--- a/package.json
+++ b/package.json
@@ -2,21 +2,33 @@
   "name": "yezdika",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5050/",
   "scripts": {
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "dev": "next dev",
-    "server": "json-server --port 4000 --watch db.json",
     "nodemon": "nodemon"
   },
   "dependencies": {
+    "@editorjs/delimiter": "^1.2.0",
+    "@editorjs/editorjs": "^2.22.2",
+    "@editorjs/embed": "^2.5.0",
+    "@editorjs/header": "^2.6.1",
+    "@editorjs/image": "^2.6.1",
+    "@editorjs/list": "^1.6.2",
+    "@editorjs/marker": "^1.2.2",
+    "@editorjs/paragraph": "^2.8.0",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.12.3",
     "@mui/icons-material": "^5.0.5",
     "@mui/material": "^5.0.6",
+    "@tiptap/extension-image": "^2.0.0-beta.24",
+    "@tiptap/react": "^2.0.0-beta.95",
+    "@tiptap/starter-kit": "^2.0.0-beta.142",
     "axios": "^0.21.4",
+    "babel-polyfill": "^6.26.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^5.1.0",
     "draft-js": "^0.11.7",
@@ -26,15 +38,15 @@
     "mongoose": "^6.0.7",
     "next": "11.1.0",
     "ra-data-simple-rest": "^3.19.0",
-    "react": "17.0.2",
-    "react-admin": "^3.19.0",
+    "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.5",
-    "react-dom": "17.0.2",
-    "react-draft-wysiwyg": "^1.14.7",
+    "react-dom": "^17.0.2",
+    "react-editor-js": "^2.0.3",
     "react-router-dom": "^5.3.0",
     "react-slick": "^0.28.1",
     "reflect-metadata": "^0.1.13",
     "sass": "^1.38.0",
+    "server": "^1.0.36",
     "slick-carousel": "^1.8.1",
     "typeorm": "^0.2.37"
   },
@@ -42,6 +54,7 @@
     "eslint": "^7.32.0",
     "eslint-config-next": "11.1.0",
     "nodemon": "^2.0.12",
-    "prettier": "2.4.1"
+    "prettier": "2.4.1",
+    "react-editor-js": "^2.0.3"
   }
 }
