--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "yezdika",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5050/",
   "scripts": {
     "build": "next build",
     "start": "next start",
@@ -19,6 +18,7 @@
     "@editorjs/list": "^1.6.2",
     "@editorjs/marker": "^1.2.2",
     "@editorjs/paragraph": "^2.8.0",
+    "@editorjs/quote": "^2.4.0",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.12.3",
